re PR c++/10278 (ICE in parser)

PR c++/10278
	* spew.c (yyerror): Avoid crashing at all costs.

	PR c++/10278
	* g++.dg/parse/crash2.C: New test.

From-SVN: r65100